
plugins {
    id 'com.android.application'
    id 'androidx.navigation.safeargs'
    id 'com.google.gms.google-services'
    id 'com.google.firebase.crashlytics'
    id 'com.google.firebase.firebase-perf'
    id 'com.google.secrets_gradle_plugin' version "0.6"

}
//apply plugin: "androidx.navigation.safeargs"
//// firebase integration
//apply plugin: 'com.google.gms.google-services'

android {
    compileSdkVersion 30
    buildToolsVersion "30.0.3"

    defaultConfig {
        applicationId "com.nocorp.scienceboard"
        minSdkVersion 21
        targetSdkVersion 30
        versionCode 1
        versionName "0.1"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        debug {
//            applicationIdSuffix ".debug"
//            debuggable true

            minifyEnabled true
            shrinkResources true
            proguardFiles getDefaultProguardFile(
                    'proguard-android-optimize.txt'),
                    'proguard-rules.pro'
        }
        release {
            minifyEnabled true
            shrinkResources true
            proguardFiles getDefaultProguardFile(
                    'proguard-android-optimize.txt'),
                    'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }

    buildFeatures {
        dataBinding true
        viewBinding true
    }

//    testOptions {
//        unitTests.includeAndroidResources = true
//    }

    // **** define your res folders ****
    sourceSets {
        main.res.srcDirs += [
                'src/main/java/com/nocorp/scienceboard/res',
                'src/main/java/com/nocorp/scienceboard/recycler/viewholder/res',
                'src/main/java/com/nocorp/scienceboard/ui/home/res',
                'src/main/java/com/nocorp/scienceboard/ui/viewholder/res',
                'src/main/java/com/nocorp/scienceboard/ui/webview/res',
                'src/main/java/com/nocorp/scienceboard/ui/history/res',
                'src/main/java/com/nocorp/scienceboard/ui/explore/res',
                'src/main/java/com/nocorp/scienceboard/ui/bookmarks/res',
                'src/main/java/com/nocorp/scienceboard/ui/ad/res'
        ]
    }

    secrets {
        propertiesFileName 'baba.properties'
    }
}

dependencies {
    implementation 'androidx.appcompat:appcompat:1.2.0'
    implementation 'com.google.android.material:material:1.3.0'
    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
    implementation 'androidx.navigation:navigation-fragment:2.3.5'
    implementation 'androidx.navigation:navigation-ui:2.3.5'
    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
    implementation 'androidx.gridlayout:gridlayout:1.0.0'
    testImplementation 'junit:junit:4.13.2'
    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'

    // FIREBASE INTEGRATION
    // Import the Firebase BoM
    implementation platform('com.google.firebase:firebase-bom:26.8.0')
    // Add the dependency for the Firebase SDK for Google Analytics
    // When using the BoM, don't specify versions in Firebase dependencies
    implementation 'com.google.firebase:firebase-analytics'
    // Declare the dependencies for the Crashlytics and Analytics libraries
    implementation 'com.google.firebase:firebase-crashlytics'
    implementation 'com.google.firebase:firebase-analytics'
    // Declare the dependency for the Performance Monitoring library
    implementation 'com.google.firebase:firebase-perf'
    // Declare the dependency for the Cloud Firestore library
    implementation 'com.google.firebase:firebase-firestore'
    // remote config
    implementation 'com.google.firebase:firebase-config'


    // GOOGLE ADMOB INTEGRATION
    implementation 'com.google.android.gms:play-services-ads:20.1.0'
    // for eu consent
    implementation 'com.google.android.ump:user-messaging-platform:1.0.0'


    // ROOM INTEGRATION
    def room_version = "2.3.0"
    implementation "androidx.room:room-runtime:$room_version"
    annotationProcessor "androidx.room:room-compiler:$room_version"
    // optional - RxJava support for Room
    implementation "androidx.room:room-rxjava2:$room_version"
    // optional - Test helpers
    testImplementation "androidx.room:room-testing:$room_version"


    // PAGING LIBRARY INTEGRATION
//    def paging_version = "2.1.2"
//    implementation "androidx.paging:paging-runtime:$paging_version" // For Kotlin use paging-runtime-ktx
//    // optional - RxJava support
//    implementation "androidx.paging:paging-rxjava2:$paging_version" // For Kotlin use paging-rxjava2-ktx


    // Preferences DataStore (SharedPreferences like APIs)
//    implementation "androidx.datastore:datastore-preferences:1.0.0-beta01"
//    // optional - RxJava3 support
//    implementation "androidx.datastore:datastore-preferences-rxjava3:1.0.0-beta01"


    // new fragment api
    def fragment_version = "1.3.3"
    // Java language implementation
    implementation "androidx.fragment:fragment:$fragment_version"


    // https://mvnrepository.com/artifact/androidx.navigation/navigation-fragment
    implementation group: 'androidx.navigation', name: 'navigation-fragment', version: '2.3.5'

    // PALETTE
    implementation 'com.android.support:palette-v7:30.0.0'



    //-----------------------------------------------------------------  MY DEPENDENCIES
    // glide dependency
    implementation 'com.github.bumptech.glide:glide:4.11.0'
    // Skip this if you don't want to use integration libraries or configure Glide.
//    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'

    // OkHttp network libraries
    implementation 'com.squareup.okhttp3:okhttp:4.9.0'

    // rxjava
//    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
//    implementation 'io.reactivex.rxjava3:rxjava:3.0.4'
//    implementation 'com.jakewharton.rxbinding4:rxbinding:4.0.0'
//    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
//    implementation "com.github.akarnokd:rxjava3-retrofit-adapter:3.0.0"
//    implementation 'com.google.code.gson:gson:2.8.6'
//    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
//    implementation 'com.github.FrangSierra:RxFirebase:1.5.6'


    // Optional -- Mockito framework
    testImplementation 'org.mockito:mockito-core:2.28.2'
    // Optional -- Robolectric environment
//    testImplementation 'androidx.test:core:1.3.0'
//    testImplementation 'org.robolectric:robolectric:4.4'



    // APPODEAL
//    implementation 'com.appodeal.ads:sdk:2.9.2.+'









    // retrofit xml parser
//    implementation 'com.squareup.retrofit2:converter-jaxb:2.9.0'

    implementation 'org.jsoup:jsoup:1.13.1'
    implementation 'commons-validator:commons-validator:1.7'

    // rss parser
//    implementation 'com.apptastic:rssreader:2.4.1'
//    implementation 'com.rometools:rome:1.15.0'
    // web crawler
//    implementation 'com.chimbori.crux:crux:3.0.1'

    // https://mvnrepository.com/artifact/commons-io/commons-io
//    implementation group: 'commons-io', name: 'commons-io', version: '2.8.0'
    // https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
//    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
    // https://mvnrepository.com/artifact/joda-time/joda-time
//    implementation group: 'joda-time', name: 'joda-time', version: '2.10.10'

    implementation 'net.dankito.readability4j:readability4j:1.0.3'
}